--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <ol>
     <li>Required documentation and information</li>
     <li>Online application versus in-person application</li>
-    <li>Ensuring the security of personal and financial data</li>\
+    <li>Ensuring the security of personal and financial data</li>
 </ol>
 
 <h2>Navigating No Credit Check Loans Guaranteed Approval</h2>
